# moadt

./: .gitignore  README.md  pyproject.toml
examples/: classic_allais.py  classic_ellsberg.py  classic_pascal.py  classic_stpetersburg.py  paper1_resource_allocation.py  paper2_medical_treatment.py  paper3_content_moderation.py  paper4_ai_research.py  paper5_corrigibility.py
moadt/: __init__.py  _engine.py
paper/: MOADT-core.md  MOADT-worked-example-1.md  MOADT-worked-example-2.md  MOADT-worked-example-3.md  MOADT-worked-example-4.md  MOADT-worked-example-5.md  MOADT-worked-example-6.md  MOADT-worked-example-7.md  MOADT-worked-example-8.md  MOADT-worked-example-9.md  R-MOADT.md  build-pdf.sh  the-scalarization-trap.md
tests/: test_engine.py  test_properties.py
