[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "moadt"
version = "0.1.0"
description = "Multi-Objective Admissible Decision Theory"
requires-python = ">=3.9"
dependencies = ["numpy>=1.22"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
include = ["moadt*"]
